<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="220dp"
    android:layout_height="220dp"
    android:layout_margin="8dp"
    android:background="@drawable/blue_bg">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/pic"
        style="@style/Style.App.circleImageView"
        android:layout_width="205dp"
        android:layout_height="150dp"
        android:layout_margin="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pic"
        app:layout_constraintTop_toBottomOf="@+id/pic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText">

        <TextView
            android:id="@+id/durationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20_min"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/exerciseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/kcalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_160_kcal"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>